wip change to csv

--- a/pipelines/rj_sms/dump_vitai/teste.ipynb
+++ b/pipelines/rj_sms/dump_vitai/teste.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,186 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>estabelecimentoId</th>\n",
-       "      <th>cnes</th>\n",
-       "      <th>sigla</th>\n",
-       "      <th>produtocodigo</th>\n",
-       "      <th>descricao</th>\n",
-       "      <th>grupo</th>\n",
-       "      <th>subgrupo</th>\n",
-       "      <th>categoria</th>\n",
-       "      <th>apresentacao</th>\n",
-       "      <th>lote</th>\n",
-       "      <th>dataVencimento</th>\n",
-       "      <th>controlado</th>\n",
-       "      <th>saldo</th>\n",
-       "      <th>datahora</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>D6B0B714-E4CA-40AE-8FC2-0CFFAFD59C69</td>\n",
-       "      <td>EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC</td>\n",
-       "      <td>6716938</td>\n",
-       "      <td>CERBT</td>\n",
-       "      <td>85400001895</td>\n",
-       "      <td>FRALDA DESCARTAVEL ADULTO, GRANDE, FITA ADESIV...</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>MATERIAL HOSPITALAR</td>\n",
-       "      <td>UNIDADE</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2019-09-09 00:00:00</td>\n",
-       "      <td>N</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2016-12-22 11:10:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7EB6A2A3-33AB-42F0-94E1-4B1B9A74F78A</td>\n",
-       "      <td>EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC</td>\n",
-       "      <td>6716938</td>\n",
-       "      <td>CERBT</td>\n",
-       "      <td>65051900356</td>\n",
-       "      <td>BIPERIDENO, CLORIDRATO 2MG</td>\n",
-       "      <td>CONTROLADOS</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>MEDICAMENTOS</td>\n",
-       "      <td>COMPRIMIDO</td>\n",
-       "      <td>16064442</td>\n",
-       "      <td>2019-06-30 00:00:00</td>\n",
-       "      <td>S</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>2017-03-07 16:37:27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9B40D134-F802-440E-876D-99DB7259566A</td>\n",
-       "      <td>EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC</td>\n",
-       "      <td>6716938</td>\n",
-       "      <td>CERBT</td>\n",
-       "      <td>65050900301</td>\n",
-       "      <td>HEPARINA SODICA 5000UI  AMPOLA 0,25ML</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>MEDICAMENTOS</td>\n",
-       "      <td>AMPOLA</td>\n",
-       "      <td>16020940</td>\n",
-       "      <td>2018-02-28 00:00:00</td>\n",
-       "      <td>N</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2017-03-10 17:30:58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>EBD67445-AE4A-4660-A745-97B7073BFAD1</td>\n",
-       "      <td>EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC</td>\n",
-       "      <td>6716938</td>\n",
-       "      <td>CERBT</td>\n",
-       "      <td>65100500506</td>\n",
-       "      <td>COMPRESSA 50X45CM, NAO ESTERIL, 18CM</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>MATERIAL HOSPITALAR</td>\n",
-       "      <td>UNIDADE</td>\n",
-       "      <td>L</td>\n",
-       "      <td>2019-09-09 00:00:00</td>\n",
-       "      <td>N</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>2017-06-08 15:22:32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>42DD504C-29D6-4758-99F6-4D12820EABCC</td>\n",
-       "      <td>EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC</td>\n",
-       "      <td>6716938</td>\n",
-       "      <td>CERBT</td>\n",
-       "      <td>65052900562</td>\n",
-       "      <td>METILPREDNISOLONA, SUCCINATO SODICO 500MG FR. AMP</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>NO INFORMADO</td>\n",
-       "      <td>MEDICAMENTOS</td>\n",
-       "      <td>FRASCO / AMPOLA</td>\n",
-       "      <td>78IF0093</td>\n",
-       "      <td>2017-05-31 00:00:00</td>\n",
-       "      <td>N</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2017-06-09 23:58:22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     id                     estabelecimentoId  \\\n",
-       "0  D6B0B714-E4CA-40AE-8FC2-0CFFAFD59C69  EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC   \n",
-       "1  7EB6A2A3-33AB-42F0-94E1-4B1B9A74F78A  EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC   \n",
-       "2  9B40D134-F802-440E-876D-99DB7259566A  EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC   \n",
-       "3  EBD67445-AE4A-4660-A745-97B7073BFAD1  EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC   \n",
-       "4  42DD504C-29D6-4758-99F6-4D12820EABCC  EC2F837C-EF91-4FF3-BB6E-48C0C1D468BC   \n",
-       "\n",
-       "      cnes  sigla produtocodigo  \\\n",
-       "0  6716938  CERBT   85400001895   \n",
-       "1  6716938  CERBT   65051900356   \n",
-       "2  6716938  CERBT   65050900301   \n",
-       "3  6716938  CERBT   65100500506   \n",
-       "4  6716938  CERBT   65052900562   \n",
-       "\n",
-       "                                           descricao         grupo  \\\n",
-       "0  FRALDA DESCARTAVEL ADULTO, GRANDE, FITA ADESIV...  NO INFORMADO   \n",
-       "1                         BIPERIDENO, CLORIDRATO 2MG   CONTROLADOS   \n",
-       "2              HEPARINA SODICA 5000UI  AMPOLA 0,25ML  NO INFORMADO   \n",
-       "3               COMPRESSA 50X45CM, NAO ESTERIL, 18CM  NO INFORMADO   \n",
-       "4  METILPREDNISOLONA, SUCCINATO SODICO 500MG FR. AMP  NO INFORMADO   \n",
-       "\n",
-       "       subgrupo            categoria     apresentacao      lote  \\\n",
-       "0  NO INFORMADO  MATERIAL HOSPITALAR          UNIDADE         L   \n",
-       "1  NO INFORMADO         MEDICAMENTOS       COMPRIMIDO  16064442   \n",
-       "2  NO INFORMADO         MEDICAMENTOS           AMPOLA  16020940   \n",
-       "3  NO INFORMADO  MATERIAL HOSPITALAR          UNIDADE         L   \n",
-       "4  NO INFORMADO         MEDICAMENTOS  FRASCO / AMPOLA  78IF0093   \n",
-       "\n",
-       "        dataVencimento controlado  saldo             datahora  \n",
-       "0  2019-09-09 00:00:00          N    3.0  2016-12-22 11:10:18  \n",
-       "1  2019-06-30 00:00:00          S  500.0  2017-03-07 16:37:27  \n",
-       "2  2018-02-28 00:00:00          N    6.0  2017-03-10 17:30:58  \n",
-       "3  2019-09-09 00:00:00          N  150.0  2017-06-08 15:22:32  \n",
-       "4  2017-05-31 00:00:00          N    1.0  2017-06-09 23:58:22  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Expected object or value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_json(\u001b[39m\"\u001b[39;49m\u001b[39m~/estoque_2023-08-22_clean.json\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/json/_json.py:784\u001b[0m, in \u001b[0;36mread_json\u001b[0;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options, dtype_backend, engine)\u001b[0m\n\u001b[1;32m    782\u001b[0m     \u001b[39mreturn\u001b[39;00m json_reader\n\u001b[1;32m    783\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 784\u001b[0m     \u001b[39mreturn\u001b[39;00m json_reader\u001b[39m.\u001b[39;49mread()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/json/_json.py:975\u001b[0m, in \u001b[0;36mJsonReader.read\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    973\u001b[0m         obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_object_parser(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_combine_lines(data_lines))\n\u001b[1;32m    974\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 975\u001b[0m     obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_object_parser(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata)\n\u001b[1;32m    976\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdtype_backend \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m lib\u001b[39m.\u001b[39mno_default:\n\u001b[1;32m    977\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39mconvert_dtypes(\n\u001b[1;32m    978\u001b[0m         infer_objects\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, dtype_backend\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdtype_backend\n\u001b[1;32m    979\u001b[0m     )\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/json/_json.py:1001\u001b[0m, in \u001b[0;36mJsonReader._get_object_parser\u001b[0;34m(self, json)\u001b[0m\n\u001b[1;32m    999\u001b[0m obj \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   1000\u001b[0m \u001b[39mif\u001b[39;00m typ \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mframe\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m-> 1001\u001b[0m     obj \u001b[39m=\u001b[39m FrameParser(json, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mparse()\n\u001b[1;32m   1003\u001b[0m \u001b[39mif\u001b[39;00m typ \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mseries\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mor\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1004\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(dtype, \u001b[39mbool\u001b[39m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/json/_json.py:1134\u001b[0m, in \u001b[0;36mParser.parse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1133\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mparse\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m-> 1134\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_parse()\n\u001b[1;32m   1136\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   1137\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/json/_json.py:1320\u001b[0m, in \u001b[0;36mFrameParser._parse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1316\u001b[0m orient \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39morient\n\u001b[1;32m   1318\u001b[0m \u001b[39mif\u001b[39;00m orient \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mcolumns\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   1319\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj \u001b[39m=\u001b[39m DataFrame(\n\u001b[0;32m-> 1320\u001b[0m         loads(json, precise_float\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mprecise_float), dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m\n\u001b[1;32m   1321\u001b[0m     )\n\u001b[1;32m   1322\u001b[0m \u001b[39melif\u001b[39;00m orient \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39msplit\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   1323\u001b[0m     decoded \u001b[39m=\u001b[39m {\n\u001b[1;32m   1324\u001b[0m         \u001b[39mstr\u001b[39m(k): v\n\u001b[1;32m   1325\u001b[0m         \u001b[39mfor\u001b[39;00m k, v \u001b[39min\u001b[39;00m loads(json, precise_float\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprecise_float)\u001b[39m.\u001b[39mitems()\n\u001b[1;32m   1326\u001b[0m     }\n",
+      "\u001b[0;31mValueError\u001b[0m: Expected object or value"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_parquet(\"~/estoque_2023-08-20_clean.parquet\")\n",
+    "df = pd.read_json(\"~/estoque_2023-08-22_clean.json\")\n",
     "df.head()"
    ]
   },
